# wgpu_perf_test

./: .gitignore  Cargo.toml
src/: camera.rs  egui_integration.rs  input.rs  main.rs  pipeline.rs  renderer.rs  shader.wgsl  state.rs  types.rs
src/ui/: ai_button.rs  inspector.rs  left_tab.rs  mod.rs  toolbar.rs  top_bar.rs
